@@ -8,7 +8,6 @@ description = 'Palantir Java Format'
 dependencies {
     api project(':palantir-java-format-spi')
     api 'com.google.guava:guava'
-    implementation 'com.google.errorprone:javac-shaded'
     implementation 'org.functionaljava:functionaljava'
     implementation 'com.fasterxml.jackson.core:jackson-databind' // purely for the debugger
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8'
@@ -32,6 +31,17 @@ dependencies {
 
 tasks.withType(JavaCompile).configureEach {
     options.errorprone.errorproneArgs += ['-Xep:StrictUnusedVariable:OFF']
+
+    options.compilerArgs += [
+        // Allow access to internal apis
+        '--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED'
+    ]
 }
 
 // false positives due to org.junit.runners.* in the test cases
